README: added info about OSX and memory usage to start admin
since i keep forgetting it all the time..

Signed-off-by: Mattias Ryrlén <mattiasr@op5.com>