@@ -20,3 +20,8 @@
 * Import all four projects into Eclipse
 * In Eclipse, run src/test/scala/Run<Admin|BattleStation|JMonkeyViewer>.scala to start an application
 * Open application in a browser using localhost:<port> where port is 8079 for Admin, 8080 for Battle and 8081 for Viewer
+
+## OSX
+
+* To get sbt admin to work under OSX you will need to run the following code before starting the admin thread.
+export SBT_OPTS=-XX:MaxPermSize=256m
